--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
+  padding: 10px;
 }
-
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
