--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   margin: 10px;
   background-color: lightskyblue;
-  padding: 10px;
+  padding: 6px;
   border-radius: 12px;
 }
 .card_img {
@@ -13,4 +13,13 @@
   height: 180px;
   object-fit: cover;
   border-radius: 5px;
+}
+.requestBtn {
+  margin: 5px;
+  padding: 6px;
+  border-radius: 12px;
+  border: none;
+  cursor: pointer;
+  background-color: lightcoral;
+  font-size: 16px;
 }
